# openclaw-memory-os

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  secret-scan.yml
config/: personal_taxonomy.example.json
data/: _empty_sample.json  sample_memories.json
deploy/: acme-issue.sh  deploy.sh
deploy/logrotate/: openclaw-memory-os
docs/: architecture.md  auth-totp.md  database-migrations.md  deletion-policy.md  deployment.md  feature-flags.md  feedback-loop-roadmap.md  final-host-acceptance.md  gap-analysis.md  openclaw-integration.md  openclaw-memory-plugin-adapter.md  perf-v030.md  privacy-scanner.md  recall-ranking.md  retrieval-diagnostics.md  self-evolution.md  web-console.md  web-security.md
examples/: api-payloads.md  cli-and-api.md
openclaw_memory_os/: __init__.py  analytics.py  app.py  audit.py  auth.py  candidate_pool.py  cli.py  config.py  consolidation.py  contracts.py  embed_provider.py  evaluation.py  evaluation_reports.py  evolution.py  feedback.py  ingestion.py  ingestion_validation.py  lexical.py  migration.py  models.py  personal_taxonomy.py  policy_store.py  privacy.py  ranking.py  recall_feedback.py  retrieval_engine.py  sessions.py
schemas/: memory.schema.json  recall.schema.json
scripts/: _dry_run_newapi_embed.py  _prune_helpers.py  _qdrant_helpers.py  _write_governance_status.py  _write_summary.py  auth_smoke.sh  autonomous_governance.sh  backup_snapshot.sh  bench_perf.py  dedup_cron.py  evaluate_retrieval.py  expire_cron.py  final_host_acceptance.sh  ingest_memory.py  install_gitleaks.sh  install_governance_cron.sh  maintenance.sh  memory_brain.py  memory_brain_consolidate.py  memory_brain_ingest.py  privacy_scan.sh  refresh_lexical.py  reindex_qdrant_embeddings.py  replay_feedback.py  run_demo.sh  run_evolution_cycle.py  session_readonly_helper.py  strict_perf_gate.py  strict_perf_gate.sh  supersede_detect.py  synth_feedback_loop.py  tier_classifier.py  varied_perf_gate.py  varied_perf_gate.sh
tests/: conftest.py  test_active_first_hybrid.py  test_agent_graduation_regressions.py  test_analytics.py  test_api.py  test_audit.py  test_auth.py  test_auth_smoke_contract.py  test_auth_smoke_nondestructive.py  test_auth_smoke_wait_for_service.py  test_auth_state_reset.py  test_autonomous_governance_dashboard.py  test_autonomous_governance_dashboard_e2e.py  test_autonomous_governance_runner.py  test_backup_snapshot_cache.py  test_bm25_inverted_index.py  test_bm25_lifespan_load.py  test_candidate_pool.py  test_candidate_pool_policy_rerank.py  test_candidate_search.py  test_consolidation.py  test_contracts.py  test_corpus_snapshot_writes.py  test_dashboard_ui_compliance.py  test_database_migration.py  test_dense_search_v030.py  test_embed_provider_newapi.py  test_evaluate_retrieval_script.py  test_evaluation_extra_metrics.py  test_evaluation_metrics.py  test_evaluation_normalize_query_and_split.py  test_evaluation_reports.py  test_evolution_funnel_consecutive_passes.py  test_feature_flags.py  test_feedback.py  test_feedback_schema.py  test_feedback_strong_validation.py  test_final_audit_regressions.py  test_final_correctness.py  test_final_freeze_deployment.py  (+45 more)
(+27 files in other folders)
