[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-memory-os"
version = "0.3.0"
description = "Privacy-clean, open-source dashboard and recall-testing layer for OpenClaw-style memory stores (Qdrant-backed)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "OpenClaw Memory OS Contributors" }]
requires-python = ">=3.10"
keywords = ["openclaw", "memory", "qdrant", "dashboard", "fastapi", "recall"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.7",
    "argon2-cffi>=23.1",
    # requests is required by the standalone maintenance scripts
    # (scripts/memory_brain_ingest.py, scripts/memory_brain_consolidate.py).
    # The package proper does not import it; we still pin it here so the
    # venv install picks it up instead of relying on the system interpreter
    # to have it.
    "requests>=2.28",
    # qdrant-client is optional; loaded lazily. Pin a permissive range.
    "qdrant-client>=1.7; python_version >= '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.4",
    "python-multipart>=0.0.7",
]

[project.urls]
Homepage = "https://github.com/Shermanxwz/openclaw-memory-os"
Repository = "https://github.com/Shermanxwz/openclaw-memory-os"
Issues = "https://github.com/Shermanxwz/openclaw-memory-os/issues"
Changelog = "https://github.com/Shermanxwz/openclaw-memory-os/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Shermanxwz/openclaw-memory-os/tree/main/docs"

[project.scripts]
openclaw-memory-os = "openclaw_memory_os.cli:main"

[tool.setuptools.packages.find]
include = ["openclaw_memory_os*"]

[tool.setuptools.package-data]
openclaw_memory_os = [
    "templates/*.html",
    "templates/*.j2",
    # B2-5 fix: ship the dashboard's CSS / JS / Chart.js assets so
    # ``pip install .`` produces a working wheel. Without these
    # globs the static files were silently dropped from the
    # distribution, leaving the FastAPI app unable to serve the
    # dashboard. The web UI mounts ``/static`` from
    # ``openclaw_memory_os/static`` (see app.py); operators who
    # ``pip install openclaw-memory-os`` need those files present.
    "static/**/*.css",
    "static/**/*.js",
    "static/**/*",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
